--- a/RBPdetect_protein_embeddings.ipynb
+++ b/RBPdetect_protein_embeddings.ipynb
@@ -127,19 +127,10 @@
     "    - embeddings: Pandas DataFrame (as .csv file) with protein names and their corresponding embedding\n",
     "    \"\"\"\n",
     "    embedder = ProtTransBertBFDEmbedder()\n",
-    "    embeddings_list = []\n",
-    "    names_list = []\n",
-    "    pb = tqdm(total=dataframe.shape[0])\n",
-    "    \n",
-    "    for record in SeqIO.parse(fasta_file, 'fasta'):\n",
-    "        sequence = str(record.seq)\n",
-    "        embedding = embedder.embed(sequence)\n",
-    "        reduced_embedding = embedder.reduce_per_protein(embedding)\n",
-    "        embeddings_list.append(reduced_embedding)\n",
-    "        names_list.append(record.id)\n",
-    "        pb.update(1)\n",
-    "    pb.close()\n",
-    "    embeddings_df = pd.concat([pd.DataFrame({'ID':names_list}), pd.DataFrame(embeddings_list)], axis=1)\n",
+    "    names = [record.id for record in SeqIO.parse(fasta_file, 'fasta')]\n",
+    "    sequences = [str(record.seq) for record in SeqIO.parse(fasta_file, 'fasta')]\n",
+    "    embeddings = [embedder.reduce_per_protein(embedder.embed(sequence)) for sequence in tqdm(sequences)]\n",
+    "    embeddings_df = pd.concat([pd.DataFrame({'ID':names}), pd.DataFrame(embeddings)], axis=1)\n",
     "    embeddings_df.to_csv(results_dir+prefix+'_embeddings.csv', index=False)\n",
     "    \n",
     "    return"
@@ -160,7 +151,7 @@
    "outputs": [],
    "source": [
     "# compute embeddings\n",
-    "compute_protein_embeddings_df('../input/your_folder/your_fasta_file.fasta', results_dir='./')"
+    "compute_protein_embeddings('../input/your_folder/your_fasta_file.fasta', results_dir='./')"
    ]
   }
  ],
