--- a/RBPdetect_protein_embeddings.ipynb
+++ b/RBPdetect_protein_embeddings.ipynb
@@ -45,7 +45,18 @@
    },
    "outputs": [],
    "source": [
+    "# Kaggle\n",
     "!pip install bio_embeddings==0.2.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Google Colab\n",
+    "!pip install -U bio_embeddings[all] > /dev/null"
    ]
   },
   {
