Update Colab/Kaggle installation & info

--- a/RBPdetect_protein_embeddings.ipynb
+++ b/RBPdetect_protein_embeddings.ipynb
@@ -15,7 +15,9 @@
     "id": "-aOQeo6fPiag"
    },
    "source": [
-    "### Installation and libraries"
+    "### Installation and libraries\n",
+    "\n",
+    "Note: the pip's dependency resolver ERROR can be safely ignored, as long as it is mentioned below the error that all packages were installed successfully."
    ]
   },
   {
@@ -45,8 +47,9 @@
    },
    "outputs": [],
    "source": [
-    "# Kaggle\n",
-    "!pip install bio_embeddings==0.2.2"
+    "# Install software for Kaggle\n",
+    "!pip install bio_embeddings==0.2.2\n",
+    "!pip install torchvision==0.10.1"
    ]
   },
   {
@@ -55,8 +58,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Google Colab\n",
-    "!pip install -U bio_embeddings[all] > /dev/null"
+    "# Install software for Google Colab\n",
+    "!pip3 install -U pip > /dev/null\n",
+    "!pip3 install -U bio_embeddings[all] > /dev/null\n",
+    "!pip install scikit_learn==1.0.2\n",
+    "!pip install pyyaml==5.4.1"
    ]
   },
   {
