Improved installation for Kaggle

--- a/RBPdetect_protein_embeddings.ipynb
+++ b/RBPdetect_protein_embeddings.ipynb
@@ -49,7 +49,8 @@
    "source": [
     "# Install software for Kaggle\n",
     "!pip install bio_embeddings==0.2.2\n",
-    "!pip install torchvision==0.10.1"
+    "!pip install torchvision==0.10.1\n",
+    "!pip install setuptools==59.5.0"
    ]
   },
   {
@@ -97,6 +98,7 @@
     "from tqdm import tqdm\n",
     "from Bio import SeqIO\n",
     "from datetime import date\n",
+    "#from distutils.version import LooseVersion # not sure if this is needed\n",
     "from bio_embeddings.embed import ProtTransBertBFDEmbedder"
    ]
   },
